# team-work

./: .env.example  .gitignore  README.md  docker-compose.yml  test_api.py
backend/: Dockerfile  requirements.txt
docs/: AGENT_EXECUTION_LOG_FIX.md  API_IMPROVEMENTS.md  API_KEY_SAVE_FIX.md  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION_REPORT.md  BUG_FIXES_IMPLEMENTATION.md  CLEANUP_PLAN.md  DATABASE_SCHEMA_UPDATE.md  DATAFRAME_FIX.md  DEPLOYMENT_GUIDE.md  FEATURES.md  FRONTEND_CONFIG_FIX.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_v0.3.0.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_GRAPH_INIT.md  LLM_CONFIG_AUTO_LOAD.md  MIGRATION_GUIDE.md  MODULES.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  SIMULATE_STREAM_ERROR_FIX.md  SIMULATION_ERROR_FIX.md  SQLALCHEMY_FIXES.md
examples/: graph_init_demo.py  simulation_metadata_demo.py
frontend/: Dockerfile  app.py  app_new.py  app_old_backup.py  enhanced_features.py  package.json  requirements.txt
scripts/: check_duplication.py  migrate_database.sh
twork-core/: __init__.py  pyproject.toml
twork-core/agent/: __init__.py  base_agent.py  environment_agent.py  multi_agent_runner.py  task_agent.py
twork-core/graph/: __init__.py  client.py  graph_builder.py  graph_store.py
twork-core/llm/: __init__.py  base.py  openai_adapter.py  prompts.py
twork-core/parser/: __init__.py  document_parser.py  entity_extractor.py
twork-core/schemas/: __init__.py  document.py  graph.py  project.py  simulation.py
twork-core/simulation/: __init__.py  engine.py  state_manager.py
(+109 files in other folders)
